<resources>
    <string name="app_name">My Application</string>
    <string name="email_or_mobile_number">Email or Mobile Number</string>
    <string name="password">Password</string>
    <string name="Model" />
    <string name="save">Save</string>
    <string name="chassis_number">Chassis Number</string>
    <string name="vehicle_no">Vehicle No</string>
    <string name="vehicle_Make">Vehicle Make</string>
    <string name="vehicle_Model">Vehicle Model</string>
    <string name="Fuel_Type">Fuel Type</string>
    <string name="vehicle_Year">Vehicle Year</string>
    <string name="enter_vehicle_reg_no">Enter Vehicle Reg No</string>
    <string name="enter_chassis_no">Enter Chassis No</string>
    <string-array name="Vehicle_Make">
        <item>Select</item>
        <item>Maruti Suzuki</item>
        <item>Hyundai</item>
        <item>Mahindra</item>
        <item>Tata</item>
        <item>Honda</item>
        <item>Toyota</item>
        <item>Ford</item>
        <item>Renault</item>
        <item>Nissan</item>
        <item>Volkswagen</item>
        <item>Others</item>
    </string-array>


    <string-array name="Fuel_Type">
        <item>Select</item>
        <item>Petro</item>
        <item>Diesel</item>
    </string-array>

    <string-array name="Year">
        <item>Select</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <string-array name="Maruti_Suzuki">
        <item>Select</item>
        <item>Alto800</item>
        <item>Ignis</item>
        <item>Swift</item>
        <item>Wagon r</item>
        <item>Ciaz</item>
        <item>Celerio</item>
        <item>Others</item>
    </string-array>

    <string-array name="Hyundai">
        <item>Select</item>
        <item>i10</item>
        <item>Grand i10</item>
        <item>i20</item>
        <item>Xcent</item>
        <item>Santro</item>
        <item>Verna</item>
        <item>Elentra</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_homepage">Homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Firstname">First Name</string>
    <string name="EmailID">Email Id</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="quick">Quick</string>
    <string name="standard">Standard</string>
    <string name="scheduled">Scheduled</string>
    <string name="special">Special</string>
    <string name="bike">Bike</string>
    <string name="car">Car</string>
    <string name="truck">Truck</string>
    <string name="bus">Bus</string>
    <string name="other">Other</string>
    <string name="log_in">Log in</string>
    <string name="verify">Verify</string>
    <string name="model_name">Model Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="forgot_password_click_here">Forgot Password ? | Click here</string>
    <string name="proceed">Proceed</string>
    <string name="selectservices">Select Services</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
