<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Vehiclereg">


    <EditText
        android:id="@+id/VehicleNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_vehicle_reg_no"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100sp"
        tools:layout_editor_absoluteX="62sp" />
    <EditText
        android:id="@+id/ChassisNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_chassis_no"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintTop_toBottomOf="@+id/VehicleNo"
        android:layout_marginTop="10sp"
        tools:layout_editor_absoluteX="62sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="160sp"
        android:layout_height="40sp"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/vehicle_Make"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChassisNo"
        tools:layout_editor_absoluteX="62sp"/>

    <Spinner
        android:id="@+id/Spinner1"
        android:layout_width="170sp"
        android:layout_height="40dp"
        android:layout_marginTop="10sp"
        android:layout_gravity="end"
        android:layout_marginStart="2sp"
        android:entries="@array/Vehicle_Make"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/ChassisNo"
        tools:layout_editor_absoluteX="62sp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="5sp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:text="@string/model_name"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="62sp"/>

    <Spinner
        android:id="@+id/Spinner2"
        android:layout_width="170sp"
        android:layout_height="40sp"
        android:layout_marginTop="5sp"
        android:layout_gravity="end"
        android:layout_marginStart="2sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/Spinner1"
        tools:layout_editor_absoluteX="62sp"/>
    <TextView
        android:id="@+id/textView7"
        android:layout_width="160sp"
        android:layout_height="40sp"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="5sp"
        android:gravity="center"
        android:text="@string/Fuel_Type"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_editor_absoluteX="62sp"/>

    <Spinner
        android:id="@+id/Spinner3"
        android:entries="@array/Fuel_Type"
        android:layout_width="170sp"
        android:layout_height="40sp"
        android:layout_marginTop="5sp"
        android:layout_gravity="end"
        android:layout_marginStart="2sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/Spinner2"
        tools:layout_editor_absoluteX="62sp"/>
    <TextView
        android:id="@+id/textView8"
        android:layout_width="160sp"
        android:layout_height="40sp"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="5sp"
        android:gravity="center"
        android:text="Year of Mfg"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_editor_absoluteX="62sp"/>

    <Spinner
        android:id="@+id/Spinner4"
        android:entries="@array/Year"
        android:layout_width="170sp"
        android:layout_height="40sp"
        android:layout_marginTop="5sp"
        android:layout_gravity="end"
        android:layout_marginStart="5sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/Spinner3"
        tools:layout_editor_absoluteX="62sp"/>
    <Button
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@drawable/rounded_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80sp"
        android:text="@string/save"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@id/textView8"
        />


</androidx.constraintlayout.widget.ConstraintLayout>

